# async-retry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  LICENSE-APACHE  README.md  test_closure_send  test_future_send  test_send
.devcontainer/: devcontainer.json
examples/: common.rs  conditional_retry.rs  simple_retry.rs
src/: backoff.rs  lib.rs  sleep.rs
tests/: integration_test.rs
