# Author: Jacques Murray

[package]
name = "async-retry"
version = "0.1.0"
edition = "2021"
authors = ["Jacques Murray <jacquesmmurray@gmail.com>"]
description = "A Rust library to simplify retrying asynchronous operations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jacques-Murray/async-retry"
readme = "README.md"
keywords = ["async", "retry", "future", "tokio", "async-std"]
categories = [
  "asynchronous",
  "network-programming",
  "development-tools::debugging",
]

[dependencies]
# Core dependencies
futures-core = "0.3.30"
cfg-if = "1.0.0"

# Optional dependencies for features
rand = { version = "0.8.5", optional = true }
log = { version = "0.4.21", optional = true }

# Optional dependency for tokio timer
# The "time" feature is needed for tokio::time::sleep
tokio = { version = "1.37.0", features = ["time"], optional = true }

# Optional dependency for async-std timer
# We specify the version constraint from your error message.
# 'async_std::task::sleep' is included in the default features.
async-std = { version = "^1.12.0", optional = true }


[dev-dependencies]
# Dev dependencies for running examples and tests
tokio = { version = "1.37.0", features = [
  "full",
] } # 'full' for main, macros, etc.
reqwest = { version = "0.12.4", features = ["json"] }
thiserror = "1.0.61"

[features]
jitter = ["dep:rand"]
logging = ["dep:log"]

# This feature enables the optional 'tokio' dependency
tokio-timer = ["dep:tokio"]

# This feature enables the optional 'async-std' dependency
async-std-timer = ["dep:async-std"]
